--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,42 @@
   <div>
     <body>
       <%= render partial: 'layouts/flash' %>
-      <%= yield %> 
+      <% if current_user.present? %>
+      <div class="row">
+        <div class="col-sm-2 bg-light groups-tab">
+          <p>
+            <strong>Welcome</strong>
+            <%= current_user.name %>
+          </p>
+          <p>
+            <%= button_to 'Edit Profile', edit_user_registration_path, class: "btn btn-success", :method => "get" %>
+          </p>
+          <div>
+            <table class="table table-hover table-dark">
+                <%= text_field_tag :search, nil, id: 'myInput', placeholder: 'Search...', class: 'form-control' %>
+                <br>
+              <thead>
+                <tr>
+                  <th scope="col">Groups</th>
+                </tr>
+              </thead>
+              <tbody>
+                <% current_user.member_ships.each do |membership|%>
+                <tr>
+                  <th scope="row"><%= link_to "#{membership.group.name}", group_path(membership.group), class: 'btn btn-outline-success btn-sm' %></th>
+                </tr>
+              <% end %>
+              </tbody>
+            </table>
+          </div>
+        </div>
+        <div class="col-sm-10 bg-light groups-tab">
+          <%= yield %>
+        </div>
+      </div>
+      <%else%>
+        <%= yield %>
+      <%end%>
     </body>
   </div>
 </html>
