--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,2 +1,6 @@
 <h2>Hello</h2>
 <%= User.where(id:@profile.user_id).pluck(:name) %>
+
+<div class="col-sm-6 bg-light">
+  <%= image_tag (current_user.avatar), class: "profile" if current_user.avatar.attached? %>
+</div>
