Change name of the project from Circle to WorkHub

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Circle</title>
+    <title>WorkHub</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -14,7 +14,7 @@
   <nav class="navbar navbar-default navbar-dark bg-dark">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#"><h1>Circle</h1></a>
+        <a class="navbar-brand" href="#"><h1>WorkHub</h1></a>
       </div>
 
       <% if current_user.present? %>
