--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -98,7 +98,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-4 bg-light task-space">
+      <div class="col-sm-4 bg-light task-space bg-dark">
         <div class="task-manipulation">
           <div>
             <%= render 'tasks/new', group: @group %>
