--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,62 +10,19 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.12/js/select2.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.12/css/select2.min.css">
   </head>
-
-  <nav class="navbar navbar-default navbar-dark bg-dark">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#"><h1>WorkHub</h1></a>
-      </div>
-
-      <% if current_user.present? %>
-        <div>
-          <%= link_to(invitations_path, class: "btn btn-outline-primary") do %>
-            Invitations
-            <span class="badge badge-light"><%= @invitation_count %></span>
-          <% end %>
-        </div>
-        <div >
-          <%= link_to "Home", user_path(current_user), class: "btn btn-outline-primary" %>
-        </div>
-      <% end %>
-
-      <div class="nav navbar-nav navbar-right">
-        <% if current_user.blank? %>
-          <div><%= link_to "Sign up", new_registration_path(resource_name) %><br/></div>
-          <div><%= link_to "Log in", new_session_path(resource_name) %></div>
-        <% else %>
-          <div><%= link_to 'Logout', destroy_user_session_path, method: :delete %></div>
-          <div><%= link_to 'Create new group', new_group_path %></div>
-        <% end %>
-      </div>
-    </div>
-  </nav>
-  <div>
     <body>
       <%= render partial: 'layouts/flash' %>
       <% if current_user.present? %>
-      <div class="row">
-        <div class="col-sm-2 bg-light groups-tab">
-          <p>
-            <strong>Welcome</strong>
-            <%= current_user.name %>
-          </p>
-          <p>
-            <%= button_to 'Edit Profile', edit_user_registration_path, class: "btn btn-success", :method => "get" %>
-          </p>
-           <div class="list-group">
-              <% current_user.member_ships.each do |membership|%>
-                <%= link_to "#{membership.group.name}", group_path(membership.group), class: 'list-group-item list-group-item-action list-group-item-dark' %>
-              <% end %>
-            </div>
-        </div>
-        <div class="col-sm-10 bg-light groups-tab">
+        <%= render partial: 'layouts/side-navigation' %>
+        <div class="parent-home">
+          <%= render partial: 'layouts/navbar' %>
           <%= yield %>
         </div>
-      </div>
       <%else%>
-        <%= yield %>
+        <div class="parent-home">
+          <%= render partial: 'layouts/navbar' %>
+          <%= yield %>
+        </div>
       <%end%>
     </body>
-  </div>
 </html>
