--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-dark bg-dark">
+<nav class="navbar navbar-default navbar-dark bg-dark fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="#"><h1>WorkHub</h1></a>
