--- a/app/views/layouts/_side-navigation.html.erb
+++ b/app/views/layouts/_side-navigation.html.erb
@@ -1,7 +1,5 @@
  <div class="side-nav bg-dark">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#"><h1>WorkHub</h1></a>
-    </div>
+    <%= link_to "Groups", new_group_path, class: 'active' %>
     <% current_user.member_ships.each do |membership|%>
       <%= link_to "#{membership.group.name}", group_path(membership.group), class: 'list-group' %>
     <% end %>
