Improve view for navs

--- a/app/views/layouts/_side-navigation.html.erb
+++ b/app/views/layouts/_side-navigation.html.erb
@@ -1,6 +1,12 @@
  <div class="side-nav bg-dark">
-    <%= link_to "Groups", new_group_path, class: 'active' %>
+    <%= link_to(new_group_path, class: "active") do %>
+          Groups
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+            <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+          </svg>
+        <% end %>
     <% current_user.member_ships.each do |membership|%>
-      <%= link_to "#{membership.group.name}", group_path(membership.group), class: 'list-group' %>
+      <%= link_to "#{membership.group.name}", group_path(membership.group), class: 'list-side-group list-group' %>
     <% end %>
   </div>
