--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -28,7 +28,7 @@ body {
   list-style-type: none;
   margin: 0;
   padding: 10px;
-  width: 20%;
+  width: 15%;
   background-color: #f1f1f1;
   position: fixed;
   height: 100%;
@@ -40,10 +40,9 @@ body {
 }
 
 .home {
-  margin-left:20%;
-  padding:1px 16px;
-  height:100%;
-  padding: 10px;
+  margin-left:18%;
+  padding: 20px;
+  overflow: auto;
 }
 
 .profile {
@@ -90,6 +89,8 @@ body {
 
 .task-space {
   padding: 10px;
+  height: 100%;
+  overflow: auto;
 }
 
 .task-index {
@@ -108,7 +109,7 @@ body {
   color: white;
 }
 
-.list-group:hover:not(.active) {
+.list-side-group:hover:not(.active) {
   background-color: #555;
   color: white;
 }
