--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,5 +1,5 @@
 <div class="home">
-  <div>
+  <div class="container-fluid p-0">
     <div class="row">
       <div class="col-sm-8 bg-light group-space">
         <div class="row">
@@ -98,7 +98,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-4 bg-light task-space bg-dark">
+      <div class="col-sm-4 bg-light task-space">
         <div class="task-manipulation">
           <div>
             <%= render 'tasks/new', group: @group %>
@@ -111,25 +111,4 @@
     </div>
   </div>
   
-</div>
-
-<div class="d-none" data-role="message-template">
-  <div class="chat-message-container">
-    <div class="row no-gutters">
-
-      <div class="col">
-        <div class="message-content">
-          <div class="text-right">
-            <small data-role="message-user"></small>
-          </div>
-
-          <p class="mb-1" data-role="message-text"></p>
-
-          <div class="text-right">
-            <small data-role="message-date"></small>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 </div>
