--- a/app/views/tasks/_index.html.erb
+++ b/app/views/tasks/_index.html.erb
@@ -5,7 +5,7 @@
     <a href="#" data-target="#show-task-modal-<%= task.id %>" data-toggle="modal" class='list-group-item list-group-item-action' style="margin-top: 10px;">
       <div class="d-flex w-100 justify-content-between">
         <h5 class="mb-1"><%= task.name %></h5>
-        <small><%= task.created_at %></small>
+        <small><%= created_time_ago(task) %></small>
       </div>
       <p class="mb-1"><%= assigned_user(task) %></p>
       <small><%= task.status %></small>
