--- a/app/views/tasks/_tasks-card.html.erb
+++ b/app/views/tasks/_tasks-card.html.erb
@@ -2,7 +2,7 @@
   <% current_user.tasks.where(status: status).each do |task| %>
     <div class="card mb-3 bg-light cursor-grab border">
       <div class="card-body p-3">
-        <small><%= task.created_at %></small>
+        <small><%= created_time_ago(task) %></small>
         <p><%= task.name %></p>
         <div class="float-right mt-n1">
           <h6><%= task.group.name %></h6>
