--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -64,3 +64,24 @@
   </div>
   
 </div>
+
+<div class="d-none" data-role="message-template">
+  <div class="chat-message-container">
+    <div class="row no-gutters">
+
+      <div class="col">
+        <div class="message-content">
+          <div class="text-right">
+            <small data-role="message-user"></small>
+          </div>
+
+          <p class="mb-1" data-role="message-text"></p>
+
+          <div class="text-right">
+            <small data-role="message-date"></small>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
