Create partial for messages

--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -16,37 +16,7 @@
         </div>
         <br>
         <div class="chat" data-channel-subscribe="group" data-group-id="<%= @group.id %>">
-          <% @group.messages.each do |room_message| %>
-            <div class="chat-message-container">
-              <div class="row no-gutters">
-                <!-- <div class="col-auto text-center">
-                  <img src="<%= room_message.user%>" class="avatar" alt="">
-
-                </div> -->
-
-                <div class="col">
-                  <div class="message-content">
-                    <div class="text-right">
-                      <small>
-                        <%= room_message.user.name %>
-                      </small>
-                    </div>
-
-                    <p class="mb-1">
-                      <%= room_message.body %>
-                    </p>
-
-                    <div class="text-right">
-                      <small>
-                        <%= room_message.created_at %>
-                      </small>
-                    </div>
-                  </div>
-                </div>
-
-              </div>
-            </div>
-          <% end %>
+          <%= render @messages %>
         </div>
         <div class="chat-input"><%= render partial: 'messages/form', locals: { group: @group } %></div>
       </div>
