--- a/app/views/tasks/_tasks-card.html.erb
+++ b/app/views/tasks/_tasks-card.html.erb
@@ -1,7 +1,10 @@
 <div id="<%= status %>-tasks">
   <% current_user.tasks.where(status: status).each do |task| %>
-    <div class="card mb-3 bg-light cursor-grab border">
+    <div class="card mb-3 bg-light cursor-grab border" id="task-<%= task.id %>">
       <div class="card-body p-3">
+        <div class="float-right">
+          <%= render partial: 'tasks/task-status-dropdown', locals: { task: task } %>
+        </div>
         <small><%= created_time_ago(task) %></small>
         <p><%= task.name %></p>
         <div class="float-right mt-n1">
