--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
           <div class="col-12 col-lg-6 col-xl-3">
             <div class="card">
               <div class="card-header">
-                <h6 class="float-right"><%=  pluralize_task(current_user.tasks.where(status: status).count) %> </h6>
+                <h6 class="float-right <%= status %>-tasks-count"><%=  pluralize_task(current_user.tasks.where(status: status).count) %> </h6>
                 <h5 class="card-title"><%= status.humanize %></h5>
                 <h6 class="card-subtitle text-muted">small description about status</h6>
               </div>
@@ -19,3 +19,53 @@
       </div> 
     </div> 
 </div>
+
+<script type="text/javascript">
+  $(".done-task-action").click(function() {
+    var tasks_card = $("#done-tasks");
+    var arr = this.href.split("/");
+    var source = find_source_status(this.className);
+    append_content(tasks_card, arr);
+    // update_task_count(source, "done");
+  });
+
+  $(".backlog-task-action").click(function() {
+    var tasks_card = $("#backlog-tasks");
+    var arr = this.href.split("/");
+    var source = find_source_status(this.className);
+    append_content(tasks_card, arr);
+    // update_task_count(source, "backlog");
+  });
+
+  $(".in_progress-task-action").click(function() {
+    var tasks_card = $("#in_progress-tasks");
+    var arr = this.href.split("/");
+    var source = find_source_status(this.className);
+    append_content(tasks_card, arr);
+    // update_task_count(source, "in_progress");
+  });
+
+  $(".assigned-task-action").click(function() {
+    var tasks_card = $("#assigned-tasks");
+    var arr = this.href.split("/");
+    var source = find_source_status(this.className);
+    append_content(tasks_card, arr);
+    // update_task_count(source, "assigned");
+  });
+
+  function append_content(tasks_card, arr) {
+    var len = arr.length;
+    var content = $("#task-"+arr[len - 2]);
+    content.remove();
+    tasks_card.append(content);
+  }
+
+  function update_task_count(source, target) {
+    var source_task_zone = $("."+source+"-tasks-count");
+    var target_task_zone = $("."+target+"-tasks-count");
+  }
+
+  function find_source_status(source_string) {
+    return source_string.split(" ")[2].split("-")[1]
+  }
+</script>
